logo align fix

--- a/CSS/home/container/left-side.css
+++ b/CSS/home/container/left-side.css
@@ -1,9 +1,12 @@
 logo {
-    display: block;
+    display: flex;
     position: relative;
     width: 100%;
     height: 25vh;
     z-index: 100;
+    align-items: center;
+    justify-content: center;
+    left: -1.5vw;
 }
 
 logo img {
